// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toSucceedWithDetail reports details when it fails due to a failure result: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toSucceedWithDetail(expected)
Expected:
  Success with \\"oops\\"
  Detail: \\"\\"detail\\"\\"
Received:
  Failure with \\"oops\\"
  Detail: \\"\\"detail\\"\\""
`;

exports[`.toSucceedWithDetail reports details when it fails due to a success result with .not: toFailTestAndMatchSnapshot 1`] = `
"expect(received).not.toSucceedWithDetail(expected)
Expected:
  Not success with \\"hello\\"
  Detail: \\"\\"detail\\"\\"
Received:
  Success with \\"\\"hello\\"\\"
  Detail: \\"\\"detail\\"\\""
`;

exports[`.toSucceedWithDetail reports details when it fails due to success with a non-matching detail: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toSucceedWithDetail(expected)
Expected:
  Success with \\"hello\\"
  Detail: \\"\\"other detail\\"\\"
Received:
  Success with \\"\\"hello\\"\\"
  Detail: \\"\\"detail\\"\\""
`;

exports[`.toSucceedWithDetail reports details when it fails due to success with a non-matching value: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toSucceedWithDetail(expected)
Expected:
  Success with \\"goodbye\\"
  Detail: \\"\\"detail\\"\\"
Received:
  Success with \\"\\"hello\\"\\"
  Detail: \\"\\"detail\\"\\""
`;
